# adaptive-leveling-system

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  test_pydantic_defaults.py
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/api/dependencies/: llm.py
backend/api/routes/: __init__.py  assessment.py  health.py  leveling.py  pdf.py  prerequisites.py  quiz.py  readiness.py  workflow.py
backend/api/schemas/: assessment.py  leveling.py  pdf.py  prerequisite.py  quiz.py  readiness.py  workflow.py
backend/domain/models/: assessment.py  common.py  leveling.py  pdf.py  prerequisite.py  quiz.py  readiness.py
backend/infrastructure/: cache.py  database.py  security.py  storage.py  student_cache.py
backend/infrastructure/repository/: assessment_repository.py  leveling_repository.py  pdf_repository.py  prerequisite_repository.py  readiness_repository.py  student_repository.py  workflow_repository.py
backend/infrastructure/storage/: pdf_storage.py
backend/infrastructure/telemetry/: logger.py  metrics.py  tracer.py
backend/llm/: config.py  factory.py  hallucination_detector.py  metrics.py  prompt_router.py
backend/llm/base/: interface.py
backend/llm/evaluators/: answer_evaluator.py
backend/llm/prompts/: answer_evaluator_batch_v1.txt  answer_evaluator_v1.txt  assessment_generator_v1.txt  leveling_generator_v1.txt  prerequisite_extractor_v1.txt
backend/llm/providers/: groq_provider.py  mock_provider.py
backend/services/: assessment_service.py  gap_detection_service.py  leveling_service.py  pdf_service.py  prerequisite_service.py  quiz_service.py  workflow_service.py
backend/workflows/: __init__.py  readiness_graph.py  states.py
backend/workflows/nodes/: __init__.py  assessment_node.py  extract_node.py  leveling_node.py  quiz_node.py  readiness_node.py
docs/: README.md
docs/architecture/: PLAN.md
docs/defense/: README.md  fase_1_fundacao.md  fase_2_upload.md  fase_3_extracao_llm.md  fase_4_avaliacao.md  fase_5_quiz.md  fase_6_readiness.md  fase_7_leveling.md  fase_8_workflow.md  fase_9_polimento.md
docs/guides/: IMPLEMENTACAO.md  fase_1_fundacao.md  fase_2_upload.md  fase_3_extracao_llm.md  fase_4_avaliacao.md  fase_5_quiz.md  fase_6_readiness.md  fase_7_leveling.md  fase_8_workflow.md  fase_9_polimento.md
docs/plans/: llm-config-check.md  prompt-router-generic-prompts.md
docs/references/: TESTE.md
frontend/app/: 0_🏠_Home.py  app.py  config.py
frontend/app/components/: knowledge_graph.py  quiz.py
frontend/streamlit/: app.py  config.py
migrations/: 001_initial_schema.sql  002_prerequisites_schema.sql  003_assessment_schema.sql  004_quiz_schema.sql  005_readiness_schema.sql  006_leveling_schema.sql  007_workflow_schema.sql
tests/: conftest.py  test_answer_evaluator.py  test_api_health.py  test_assessment_routes.py  test_assessment_service.py  test_cache_connection.py  test_database_connection.py  test_gap_detection_service.py  test_leveling_service.py  test_llm_interface.py  test_pdf_routes.py  test_pdf_service.py  test_prerequisite_routes.py  test_prerequisite_service.py  test_quiz_service.py  test_storage_connection.py  test_workflow.py
(+16 files in other folders)
