[tool.poetry]
name = "adaptive-leveling-system"
version = "0.1.0"
description = "AI-powered educational readiness assessment and personalized leveling platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "frontend" },
]

[tool.poetry.dependencies]
python = "^3.12"
# FastAPI and Web
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"
httpx = "^0.27.0"
# Pydantic
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
# LLM
pydantic-ai = "^0.0.14"
groq = "^0.12.0"
# Storage and Database
boto3 = "^1.35.0"
asyncpg = "^0.30.0"  # PostgreSQL async driver
psycopg2-binary = "^2.9.10"
redis = {extras = ["valkey"], version = "^5.2.0"}
# Observability
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
opentelemetry-instrumentation-httpx = "^0.49b0"
opentelemetry-exporter-otlp = "^1.28.0"
loguru = "^0.7.0"
# PDF Processing
pypdf2 = "^3.0.1"
# Frontend
streamlit = "^1.40.0"
pypdf = "^6.12.2"
langgraph = "^1.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"
bandit = "^1.7.10"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.14.0"
faker = "^33.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend", "frontend", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "ARG001",  # Unused function argument (for dependency injection)
    "ARG002",  # Unused method argument (for dependency injection)
    "B008",    # Do not perform function call `Depends` in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=backend --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "boto3.*",
    "botocore.*",
    "opentelemetry.*",
    "loguru.*",
    "pypdf.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# Bandit configuration (security linting)
[tool.bandit]
exclude_dirs = [".git", "__pycache__", "htmlcov", ".pytest_cache"]
skips = ["B101", "B104"]  # B101: assert_used, B104: hardcoded_bind_all_interfaces (0.0.0.0 is intentional for dev)
